# shoe_store_back_end

./: db.sqlite3  pyproject.toml
ShoeStore/: settings.py  urls.py
Shoes/: admin.py  models.py
Shoes/management/commands/: bootstrap_data.py
Shoes/migrations/: 0001_initial.py
api/: serializers.py  views.py
